syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.saber.spring_grpc_server.proto";

message HelloRequest {
  string  firstName = 1;
  string  lastName = 2;
}

message HelloResponse {
  string  message = 1;
}

service HelloService {
  rpc sayHello(HelloRequest) returns (HelloResponse) {};
}